--- a/resources/index.html
+++ b/resources/index.html
@@ -240,7 +240,7 @@
                   </div>
                   <div class="flex justify-between">
                     <div>Open settings in editor</div>
-                    <fluent-button appearance="stealth" onclick="openSettingsFile();">
+                    <fluent-button appearance="stealth" onclick="modifyNodeAttribute('#settings-fluent-dialog', 'hidden', true); openSettingsFile();">
                       <div class="flex gap"><span class="fluent-icon fluent-icon--TextDocumentSettings"></span><span>Open settings file</span></div>
                     </fluent-button>
                   </div>
