--- a/resources/index.html
+++ b/resources/index.html
@@ -53,7 +53,7 @@
         </div>
         <div slot="end" style="border-right: 1px solid var(--third-bg-color);">
           <fluent-button id="openSplitView-fluent-button" appearance="stealth" onclick="toggleNodeDisplay('#openSplitView-fluent-menu')"><span class="fluent-icon fluent-icon--ViewAll2"></span></fluent-button>
-          <fluent-menu id="openSplitView-fluent-menu" class="grid padding-x padding-y gap" style="grid-template-columns: 1fr 1fr; display: none;">
+          <fluent-menu id="openSplitView-fluent-menu" class="grid padding-x padding-y gap" style="grid-template-columns: 1fr 1fr; margin-left: -10px; display: none;">
             <fluent-button appearance="stealth" onmousedown="openSplitView(1, '1')"><span class="fluent-icon fluent-icon--GridViewLarge"></span></fluent-button>
             <fluent-button appearance="stealth" onmousedown="openSplitView(2, '2-vertical')"><span class="fluent-icon fluent-icon--DoubleColumn"></span></fluent-button>
             <fluent-button appearance="stealth" onmousedown="openSplitView(2, '2-horizontal')"><span class="fluent-icon fluent-icon--CellSplitVertical"></span></fluent-button>
@@ -68,10 +68,16 @@
       </fluent-toolbar>
       <section class="main-section" style="">
         <nav id="fileSide-nav" class="side-nav padding-x">
-          <div id="fileNavContainer-div"></div>
+          <div id="fileNavContainer-div" style="height: 100%; display: none;"></div>
+          <div id="emptyNavContainer-div" style="height: 100%;">
+            <div class="flex flex-col padding-x padding-y justify-center gap" style="height: 100%; align-items: center; color: var(--color);">
+              <span class="fluent-icon fluent-icon--FileBug" style="font-size: 40px; margin: 0;"></span>
+              <span class="text-center">No files to show. Upload or create files to see them here.</span>
+            </div>
+          </div>
         </nav>
         <article id="editor-article" class="editor-article" style="display: none;">
-          <fluent-toolbar id="topEditorPanel-nav" class="topNav-fluent-toolbar" style="border-bottom: 1px solid var(--third-bg-color);">
+          <fluent-toolbar id="topEditorPanel-nav" class="topNav-fluent-toolbar" style="border-bottom: 1px solid var(--color);">
             <form id="searchAndReplace-form" slot="start" role="search" style="transition: width 1s ease-in-out; width: auto;"></form>
             <div slot="end" style="border-right: 1px solid var(--third-bg-color);">
               <fluent-button id="cutText-fluent-button" appearance="stealth" onclick="EditorManager.cut();"><span class="fluent-icon fluent-icon--Cut"></span></fluent-button>   
@@ -90,44 +96,47 @@
         </article>
         <article id="editorStartPage-article" class="editor-article" style="display: none;">
           <div class="flex" style="flex-wrap: wrap; width: 100%; height: 100%; padding: 40px 60px; gap: 40px; overflow: auto;">
-            <div class="flex flex-col" style="flex: 300px; gap: 10px; width: calc(50% - 20px); height: 220px;">
+            <div style="flex: 300px; height: 180px;">
               <header>Files</header>
-              <fluent-card class="flex" style="padding: 10px; gap: 10px; min-width: 150px; max-width: 300px; height: 40px;" onclick="uploadFile();">
+              <fluent-anchor class="startPage-fluent-anchor" onclick="uploadFile();">
                 <span class="fluent-icon fluent-icon--Upload"></span><span>Open files</span>
-              </fluent-card>
-              <fluent-card class="flex" style="padding: 10px; gap: 10px; min-width: 150px; max-width: 300px; height: 40px;" onclick="createNewFile();">
+              </fluent-anchor>
+              <fluent-anchor class="startPage-fluent-anchor" onclick="createNewFile();">
                 <span class="fluent-icon fluent-icon--Add"></span><span>Create file</span>
-              </fluent-card>
-              <fluent-card class="flex" style="padding: 10px; gap: 10px; min-width: 150px; max-width: 300px; height: 40px;" onclick="uploadFolder();">
+              </fluent-anchor>
+              <fluent-anchor class="startPage-fluent-anchor" onclick="uploadFolder();">
                 <span class="fluent-icon fluent-icon--FabricFolderUpload"></span><span>Open directory</span>
-              </fluent-card>
-              <fluent-card class="flex" style="padding: 10px; gap: 10px; min-width: 150px; max-width: 300px; height: 40px;" onclick="openLastFilesFromStorage();">
+              </fluent-anchor>
+              <fluent-anchor class="startPage-fluent-anchor" onclick="openLastFilesFromStorage();">
                 <span class="fluent-icon fluent-icon--CalendarAgenda"></span><span>Restore last files</span>
-              </fluent-card>
+              </fluent-anchor>
             </div>
-            <div class="flex flex-col" style="flex: 300px; gap: 10px; width: calc(50% - 20px); height: 180px;">
+            <div style="flex: 300px; height: 180px;">
               <header>Settings</header>
-              <fluent-card class="flex" style="padding: 10px; gap: 10px; min-width: 150px; max-width: 300px; height: 40px;" onclick="showSettingsMain();">
+              <fluent-anchor class="startPage-fluent-anchor" onclick="modifyNodeAttribute('#settings-fluent-dialog', 'hidden', false);">
                 <span class="fluent-icon fluent-icon--Settings"></span><span>Open settings</span>
-              </fluent-card>
-              <fluent-card class="flex" style="padding: 10px; gap: 10px; min-width: 150px; max-width: 300px; height: 40px;" onclick="openSettingsFile();">
+              </fluent-anchor>
+              <fluent-anchor class="startPage-fluent-anchor" onclick="openSettingsFile();">
                 <span class="fluent-icon fluent-icon--TextDocumentSettings"></span><span>Open settings file</span>
-              </fluent-card>
+              </fluent-anchor>
+              <fluent-anchor class="startPage-fluent-anchor" onclick="modifyNodeAttribute('#settings-fluent-dialog', 'hidden', false); modifyNodeAttribute('#settings-fluent-tabs', 'activeid', 'settingsInfoTab-fluent-tab');">
+                <span class="fluent-icon fluent-icon--Info"></span><span>Fluent Code Info</span>
+              </fluent-anchor>
             </div>
           </div>
         </article>
       </section>
       <nav class="bottom-nav flex">
-        <div id="bottomFileInfo-div" class="flex justify-start gap" style="overflow: hidden; width: calc(50% - calc(var(--bottom-short-info-width) / 2));">
-          <span data-fileInfo="path"></span>
+        <div id="bottomFileInfo-div" class="flex justify-start" style=" width: calc(50% - calc(var(--bottom-short-info-width) / 2));">
+          <span data-fileInfo="path" style="width: 100%; overflow: hidden; text-overflow: ellipsis;"></span>
         </div>
-        <div id="bottomShortInfo-div" class="flex justify-center" style="overflow: hidden; width: var(--bottom-short-info-width);">
-          <span id="bottomShortInfo-span"></span>
+        <div id="bottomShortInfo-div" class="flex justify-center" style="width: var(--bottom-short-info-width);">
+          <span id="bottomShortInfo-span" class="text-center" style="width: 100%; overflow: hidden;"></span>
         </div>
         <div id="bottomEditorInfo-div" class="flex justify-end gap" style="overflow: hidden; width: calc(50% - calc(var(--bottom-short-info-width) / 2))">
           <span>Ln: </span><span data-editorInfo="currentLine"></span>
-          <span>Col: </span><span data-editorInfo="currentColumn"></span><span class="margin-y" style="color: var(--scrollbar-color);">|</span>
-          <span>Length: </span><span data-editorInfo="length"></span><span class="margin-y" style="color: var(--scrollbar-color);">|</span>
+          <span>Col: </span><span data-editorInfo="currentColumn"></span><span class="margin-y" style="color: var(--color);">|</span>
+          <span>Length: </span><span data-editorInfo="length"></span><span class="margin-y" style="color: var(--color);">|</span>
           <span data-fileInfo="language"></span>
         </div>
       </nav>
@@ -194,12 +203,12 @@
             </div>
           </div>
           <div style="width: 100%; height: calc(100% - 80px);">
-            <fluent-tabs activeid="settingsThemingTab-container">
-              <fluent-tab id="settingsThemingTab-container" class="margin-y">Theming</fluent-tab>
-              <fluent-tab id="settingsAppTab-container" class="margin-y">App</fluent-tab>
-              <fluent-tab id="settingsEditorTab-container" class="margin-y">Editor</fluent-tab>
-              <fluent-tab id="settingsFileTab-container" class="margin-y">Files</fluent-tab>
-              <fluent-tab id="settingsInfoTab-container" class="margin-y">Info</fluent-tab>
+            <fluent-tabs id="settings-fluent-tabs" activeid="settingsThemingTab-fluent-tab">
+              <fluent-tab id="settingsThemingTab-fluent-tab" class="margin-y">Theming</fluent-tab>
+              <fluent-tab id="settingsAppTab-fluent-tab" class="margin-y">App</fluent-tab>
+              <fluent-tab id="settingsEditorTab-fluent-tab" class="margin-y">Editor</fluent-tab>
+              <fluent-tab id="settingsFileTab-fluent-tab" class="margin-y">Files</fluent-tab>
+              <fluent-tab id="settingsInfoTab-fluent-tab" class="margin-y">Info</fluent-tab>
               <fluent-tab-panel class="padding-x padding-y" >
                 <div class="flex flex-col margin-x" style="gap: 20px;">
                   <div class="flex justify-between" style="align-items: center;">
@@ -314,6 +323,15 @@
               <fluent-tab-panel class="padding-x padding-y">
                 <div class="flex flex-col margin-x" style="gap: 20px;">
                   <div class="flex justify-between">
+                    <div>Restore recently used files when opened</div>
+                    <fluent-switch data-settings='["file", "auto-restore-files"]' data-settings-type="checkbox">
+                      <span slot="checked-message">On</span>
+                      <span slot="unchecked-message">Off</span>
+                      <label for="cap-switch"></label>
+                    </fluent-switch>
+                  </div>
+                  <fluent-divider></fluent-divider>
+                  <div class="flex justify-between">
                     <div>Saving files before close</div>
                     <fluent-switch data-settings='["file", "save-before-close"]' data-settings-type="checkbox">
                       <span slot="checked-message">On</span>
@@ -360,7 +378,7 @@
                       <span slot="heading">Third part packages</span>
                       <div class="flex flex-col margin-x margin-y" style="max-width: 500px;">
                         <span>Fluent Code depends on this packages:</span>
-                        <ul style="list-style-type: '> '; border-left: 1px solid var(--scrollbar-color);">
+                        <ul style="list-style-type: '> '; border-left: 1px solid var(--color);">
                           <li>Neutralino JS</li>
                           <li>Codemirror 6</li>
                           <li>Fluent WebComponents</li>
