--- a/resources/index.html
+++ b/resources/index.html
@@ -33,30 +33,31 @@
     <main id="content-main" class="main" style="display: none;">
       <fluent-toolbar id="topAppPanel-nav" class="topNav-fluent-toolbar" style="background-color: var(--second-bg-color);">
         <div>
-          <fluent-button appearance="stealth" onclick="toggleNodeDisplay('#addFiles-fluent-menu')" onblur="hideNode('#addFiles-fluent-menu')"><div class="flex gap"><span class="fluent-icon fluent-icon--AddTo"></span><span>Add files</span></div></fluent-button>
+          <fluent-button appearance="stealth" onclick="toggleNodeDisplay('#addFiles-fluent-menu')" onblur="hideNode('#addFiles-fluent-menu')"><div class="flex gap-sm"><span class="fluent-icon fluent-icon--AddTo"></span><span>Add files</span></div></fluent-button>
           <fluent-menu id="addFiles-fluent-menu" style="display: none;">
-            <fluent-menu-item onmousedown="uploadFile();"><div class="flex gap"><span class="fluent-icon fluent-icon--OpenFile"></span><span>Open files</span></div></fluent-menu-item>
-            <fluent-menu-item onmousedown="createNewFile();"><div class="flex gap"><span class="fluent-icon fluent-icon--PageAdd"></span><span>New file</span></div></fluent-menu-item>
-            <fluent-menu-item onmousedown="uploadFolder();"><div class="flex gap"><span class="fluent-icon fluent-icon--FabricFolderUpload"></span><span>Open directory</span></div></fluent-menu-item>
+            <fluent-menu-item onmousedown="uploadFile();"><div class="flex gap-sm"><span class="fluent-icon fluent-icon--OpenFile"></span><span>Open files</span></div></fluent-menu-item>
+            <fluent-menu-item onmousedown="createNewFile();"><div class="flex gap-sm"><span class="fluent-icon fluent-icon--PageAdd"></span><span>New file</span></div></fluent-menu-item>
+            <fluent-menu-item onmousedown="uploadFolder();"><div class="flex gap-sm"><span class="fluent-icon fluent-icon--FabricFolderUpload"></span><span>Open directory</span></div></fluent-menu-item>
           </fluent-menu>
         </div>
         <div>
           <fluent-button id="saveAllFiles-fluent-button" appearance="stealth" onclick="FileManager.saveAllFiles();"><span class="fluent-icon fluent-icon--Save"></span></fluent-button>
+          <fluent-button id="runFile-fluent-button" appearance="stealth" onclick="FileManager.runFile(FileManager.activeFilePath);"><span class="fluent-icon fluent-icon--Play"></span></fluent-button>
         </div>
         <div>
           <fluent-button appearance="stealth" onclick="toggleNodeDisplay('#moreOptions-fluent-menu')" onblur="hideNode('#moreOptions-fluent-menu')"><span class="fluent-icon fluent-icon--More"></span></fluent-button>
           <fluent-menu id="moreOptions-fluent-menu" style="display: none;">
-            <fluent-menu-item onmousedown="openLastFilesFromStorage();"><div class="flex gap"><span class="fluent-icon fluent-icon--CalendarReply"></span><span>Open latest files</span></div></fluent-menu-item>
-            <fluent-menu-item id="closeAllFiles-fluent-menu-item" onmousedown="FileManager.closeAllFiles();"><div class="flex gap"><span class="fluent-icon fluent-icon--PageRemove"></span><span>Close all files</span></div></fluent-menu-item>
+            <fluent-menu-item onmousedown="openLastFilesFromStorage();"><div class="flex gap-sm"><span class="fluent-icon fluent-icon--CalendarReply"></span><span>Open latest files</span></div></fluent-menu-item>
+            <fluent-menu-item id="closeAllFiles-fluent-menu-item" onmousedown="FileManager.closeAllFiles();"><div class="flex gap-sm"><span class="fluent-icon fluent-icon--PageRemove"></span><span>Close all files</span></div></fluent-menu-item>
           </fluent-menu>
         </div>
         <div slot="end" class="padding-y">
-          <fluent-search id="fileSearch-fluent-search" appearance="outline" placeholder="Search in files" style="width: 200px;" onblur="hideNode('#fileSearch-fluent-menu')" oninput='FileNav.searchInFileItems(this.value)'></fluent-search>
-          <fluent-menu id="fileSearch-fluent-menu" style="display: none; width: 200px;"></fluent-menu>
+          <fluent-search id="fileSearch-fluent-search" appearance="outline" placeholder="Search in files" style="width: 200px;" onclick="FileNav.searchInFileItems(this.value); this.focus();" oninput='searchEventAction(event, function(){FileNav.searchInFileItems(document.getElementById("fileSearch-fluent-search").value);})' onkeyup='keyboardEventActions(event, "Enter", function(){FileNav.searchInFileItems(document.getElementById("fileSearch-fluent-search").value);})'></fluent-search>
+          <fluent-menu id="fileSearch-fluent-menu" style="width: 200px;"></fluent-menu>
         </div>
         <div slot="end" class="padding-y" style="border-right: 1px solid var(--third-bg-color);">
-          <fluent-button id="openSplitView-fluent-button" appearance="stealth" onclick="toggleNodeDisplay('#openSplitView-fluent-menu')"><span class="fluent-icon fluent-icon--ViewAll2"></span></fluent-button>
-          <fluent-menu id="openSplitView-fluent-menu" class="grid padding-x padding-y gap" style="grid-template-columns: 1fr 1fr; margin-left: -20px; display: none;">
+          <fluent-button id="openSplitView-fluent-button" appearance="stealth" onclick="toggleNodeDisplay('#openSplitView-fluent-menu')" onblur="hideNode('#openSplitView-fluent-menu')"><span class="fluent-icon fluent-icon--ViewAll2"></span></fluent-button>
+          <fluent-menu id="openSplitView-fluent-menu" class="grid padding-x padding-y gap-sm" style="grid-template-columns: 1fr 1fr; margin-left: -20px;">
             <fluent-button appearance="stealth" onmousedown="openSplitView(1, '1')"><span class="fluent-icon fluent-icon--GridViewLarge"></span></fluent-button>
             <fluent-button appearance="stealth" onmousedown="openSplitView(2, '2-vertical')"><span class="fluent-icon fluent-icon--DoubleColumn"></span></fluent-button>
             <fluent-button appearance="stealth" onmousedown="openSplitView(2, '2-horizontal')"><span class="fluent-icon fluent-icon--CellSplitVertical"></span></fluent-button>
@@ -75,7 +76,7 @@
         <nav id="fileSide-nav" class="side-nav">
           <div id="fileNavContainer-div" style="min-height: calc(100% - 20px); display: none;"></div>
           <div id="emptyNavContainer-div" style="height: calc(100% - 20px);">
-            <div class="flex flex-col padding-x padding-y justify-center gap" style="height: 100%; align-items: center; color: var(--color);">
+            <div class="flex flex-col padding-x padding-y justify-center gap-sm" style="height: 100%; align-items: center; color: var(--color);">
               <span class="fluent-icon fluent-icon--FileBug" style="font-size: 40px; margin: 0;"></span>
               <span class="text-center">No files to show. Upload or create files to see them here.</span>
             </div>
@@ -100,7 +101,7 @@
           <div id="editorContainer-div" class="editorContainer-div"></div>
         </article>
         <article id="editorStartPage-article" class="editor-article" style="display: none;">
-          <div class="grid" style="width: 100%; height: 100%; padding-left: 40px; padding-top: 40px; padding-bottom: 40px; grid-template-columns: 1fr; grid-template-rows: repeat(2, 1fr);  gap: 30px; overflow: auto; align-items: center;">
+          <div class="grid" style="width: 100%; height: 100%; padding-left: 40px; padding-top: 40px; padding-bottom: 40px; grid-template-columns: 1fr; grid-template-rows: repeat(2, 1fr);  gap-sm: 30px; overflow: auto; align-items: center;">
             <div style="width: 100%;">
               <header>Files</header>
               <fluent-anchor class="startPage-fluent-anchor" onclick="uploadFile();">
@@ -138,7 +139,7 @@
         <div id="bottomShortInfo-div" class="flex justify-center" style="width: var(--bottom-short-info-width);">
           <span id="bottomShortInfo-span" class="text-center" style="width: 100%; overflow: hidden;"></span>
         </div>
-        <div id="bottomEditorInfo-div" class="flex justify-end gap" style="overflow: hidden; width: calc(50% - calc(var(--bottom-short-info-width) / 2))">
+        <div id="bottomEditorInfo-div" class="flex justify-end gap-sm" style="overflow: hidden; width: calc(50% - calc(var(--bottom-short-info-width) / 2))">
           <span>Ln: </span><span data-editorInfo="currentLine"></span>
           <span>Col: </span><span data-editorInfo="currentColumn"></span><span class="padding-y" style="color: var(--color);">|</span>
           <span>Length: </span><span data-editorInfo="length"></span><span class="padding-y" style="color: var(--color);">|</span>
@@ -161,38 +162,46 @@
               <fluent-tab class="margin-y">Info</fluent-tab>
               <fluent-tab class="margin-y">Run & preview</fluent-tab>
               <fluent-tab-panel class="padding-x padding-y">
-                <div class="flex flex-col margin-x" style="gap: 20px;">
-                  <div class="flex gap" style="align-items: center;">
+                <div class="flex flex-col gap-lg margin-x">
+                  <div class="flex gap-sm" style="align-items: center;">
                     <span class="text-lg">Filename:</span><fluent-text-field data-filePropertiesInfo="filenameWithoutExtension" style="width: 250px;"></fluent-text-field>
                   </div>
-                  <div class="flex gap" style="align-items: center;">
+                  <div class="flex gap-sm" style="align-items: center;">
                     <span class="text-lg">File type:</span><fluent-badge data-filePropertiesInfo="fileType"></fluent-badge>
                   </div>
-                  <div class="flex flex-col gap">
+                  <div class="flex flex-col gap-sm">
                     <span class="text-lg">Full file path:</span><fluent-badge data-filePropertiesInfo="filePath"></fluent-badge>
                   </div>
                   <fluent-divider></fluent-divider>
-                  <div class="flex gap" style="align-items: center;">
+                  <div class="flex gap-sm" style="align-items: center;">
                     <span class="text-lg">Size:</span><fluent-badge data-filePropertiesInfo="size"></fluent-badge>
                   </div>
                   <fluent-divider></fluent-divider>
-                  <div class="flex gap" style="align-items: center;">
+                  <div class="flex gap-sm" style="align-items: center;">
                     <span class="text-lg">Creation date: </span><fluent-badge data-filePropertiesInfo="creationDate"></fluent-badge>
                   </div>
-                  <div class="flex gap" style="align-items: center;">
+                  <div class="flex gap-sm" style="align-items: center;">
                     <span class="text-lg">Modify date: </span><fluent-badge data-filePropertiesInfo="modifyDate"></fluent-badge>
                   </div>
                 </div>
               </fluent-tab-panel>
               <fluent-tab-panel class="padding-x padding-y">
-                <div class="flex flex-col margin-x" style="gap: 20px;">
-                  
+                <div class="flex flex-col gap-lg margin-x">
+                  <div class="flex gap-md">
+                    <span class="fluent-icon fluent-icon--Info"></span>
+                    <span>Set actions that should be performed when run has been button clicked</span>
+                  </div>
+                  <fluent-checkbox data-additionalFileInfo="openInDefaultAppOption">Open in default app</fluent-checkbox>
+                  <div class="flex flex-col gap-md">
+                    <fluent-checkbox data-additionalFileInfo="exeCommandOption">Execute command</fluent-checkbox>
+                    <fluent-text-area data-additionalFileInfo="exeCommandValue" appearance="outline" resize="vertical" placeholder="shutdown --s"></fluent-text-area>
+                  </div>
                 </div>
               </fluent-tab-panel>
             </fluent-tabs>
           </div>
-          <div class="flex gap justify-end" style="width: 100%; height: 40px; align-items: center;">
-            <fluent-button appearance="accent" onclick="modifyNodeAttribute('#fileProperties-fluent-dialog', 'hidden', true); FileManager.renameFileUsingForm();">Save</fluent-button>
+          <div class="flex gap-sm justify-end" style="width: 100%; height: 40px; align-items: center;">
+            <fluent-button appearance="accent" onclick="modifyNodeAttribute('#fileProperties-fluent-dialog', 'hidden', true); FileManager.renameFileUsingForm(FileManager.activeFilePath); FileManager.setAdditionalFileInfoUsingForm(FileManager.activeFilePath);">Save</fluent-button>
             <fluent-button appearance="outline" onclick="modifyNodeAttribute('#fileProperties-fluent-dialog', 'hidden', true)">Close</fluent-button>
           </div>
         </div>
@@ -215,7 +224,7 @@
               <fluent-tab id="settingsFileTab-fluent-tab" class="margin-y">Files</fluent-tab>
               <fluent-tab id="settingsInfoTab-fluent-tab" class="margin-y">Info</fluent-tab>
               <fluent-tab-panel class="padding-x padding-y" >
-                <div class="flex flex-col margin-x" style="gap: 20px;">
+                <div class="flex flex-col gap-lg margin-x">
                   <div class="flex justify-between" style="align-items: center;">
                     <div>App color mode</div>
                     <fluent-select data-settings='["mode"]'>
@@ -226,14 +235,14 @@
                   </div>
                   <fluent-divider></fluent-divider>
                   <div class="flex" style="gap: 10%;">
-                    <div class="flex flex-col gap" style="flex: 45%;">
+                    <div class="flex flex-col gap-sm" style="flex: 45%;">
                       <div style="margin-x">Light theme colors</div>
                       <fluent-text-field data-settings='["modes", "light-mode", "accent-bg-color"]'>Accent color </fluent-text-field>
                       <fluent-text-field data-settings='["modes", "light-mode", "first-bg-color"]'>First background color </fluent-text-field>
                       <fluent-text-field data-settings='["modes", "light-mode", "second-bg-color"]'>Second background color </fluent-text-field>
                       <fluent-text-field data-settings='["modes", "light-mode", "third-bg-color"]'>Third background color </fluent-text-field>
                     </div>
-                    <div class="flex flex-col gap" style="flex: 45%;">
+                    <div class="flex flex-col gap-sm" style="flex: 45%;">
                       <div style="margin-x">Dark theme colors</div>
                       <fluent-text-field data-settings='["modes", "dark-mode", "accent-bg-color"]'>Accent color </fluent-text-field>
                       <fluent-text-field data-settings='["modes", "dark-mode", "first-bg-color"]'>First background color </fluent-text-field>
@@ -244,17 +253,17 @@
                 </div>
               </fluent-tab-panel>
               <fluent-tab-panel class="padding-x padding-y">
-                <div class="flex flex-col margin-x" style="gap: 20px;">
+                <div class="flex flex-col gap-lg margin-x">
                   <div class="flex justify-between">
                     <div>Change settings to default</div>
                     <fluent-button appearance="stealth" onclick="App.changeSettingsToDefault();">
-                      <div class="flex gap"><span class="fluent-icon fluent-icon--DefaultSettings"></span><span>Change to default</span></div>
+                      <div class="flex gap-sm"><span class="fluent-icon fluent-icon--DefaultSettings"></span><span>Change to default</span></div>
                     </fluent-button>
                   </div>
                   <div class="flex justify-between">
                     <div>Open settings in editor</div>
                     <fluent-button appearance="stealth" onclick="modifyNodeAttribute('#settings-fluent-dialog', 'hidden', true); openSettingsFile();">
-                      <div class="flex gap"><span class="fluent-icon fluent-icon--TextDocumentSettings"></span><span>Open settings file</span></div>
+                      <div class="flex gap-sm"><span class="fluent-icon fluent-icon--TextDocumentSettings"></span><span>Open settings file</span></div>
                     </fluent-button>
                   </div>
                   <fluent-divider></fluent-divider>
@@ -269,7 +278,7 @@
                 </div>
               </fluent-tab-panel>
               <fluent-tab-panel class="padding-x padding-y">
-                <div class="flex flex-col margin-x" style="gap: 20px;">
+                <div class="flex flex-col gap-lg margin-x">
                   <div class="flex justify-between">
                     <div>Font size</div>
                     <fluent-number-field min="8" max="72" data-settings='["editor", "font-size"]'></fluent-number-field>
@@ -326,7 +335,7 @@
                 </div>
               </fluent-tab-panel>
               <fluent-tab-panel class="padding-x padding-y">
-                <div class="flex flex-col margin-x" style="gap: 20px;">
+                <div class="flex flex-col gap-lg margin-x">
                   <div class="flex justify-between">
                     <div>Restore recently used files when opened</div>
                     <fluent-switch data-settings='["file", "auto-restore-files"]' data-settings-type="checkbox">
@@ -368,12 +377,12 @@
                 </div>
               </fluent-tab-panel>
               <fluent-tab-panel class="padding-x padding-y">
-                <div class="flex flex-col margin-x" style="gap: 20px;">
-                  <div class="flex gap" style="align-items: baseline;">
+                <div class="flex flex-col gap-lg margin-x">
+                  <div class="flex gap-sm" style="align-items: baseline;">
                     <span>Fluent Code version: </span>
                     <fluent-badge data-appInfo="version"></fluent-badge>
                   </div>
-                  <div class="flex flex-col gap">
+                  <div class="flex flex-col gap-sm">
                     <div>Fluent Code elements, code and packages are licensed under <span class="font-bold">MIT</span> license.</div>
                     <div>Fluent Code installers and other distribution forms are licensed under <span class="font-bold">Creative Commons License Attribution-ShareAlike 4.0</span></div>
                   </div>
@@ -399,7 +408,7 @@
               </fluent-tab-panel>
             </fluent-tabs>
           </div>
-          <div class="flex gap justify-end" style="width: 100%; height: 40px; align-items: center;">
+          <div class="flex gap-sm justify-end" style="width: 100%; height: 40px; align-items: center;">
             <fluent-button appearance="accent" onclick="modifyNodeAttribute('#settings-fluent-dialog', 'hidden', true); App.close('RESTART');">Save & restart</fluent-button>
             <fluent-button appearance="outline" onclick="modifyNodeAttribute('#settings-fluent-dialog', 'hidden', true)">Close</fluent-button>
           </div>
