Extend file preview
Add option to open link.

--- a/resources/index.html
+++ b/resources/index.html
@@ -196,6 +196,10 @@
                     <fluent-checkbox data-additionalFileInfo="exeCommandOption">Execute command</fluent-checkbox>
                     <fluent-text-area data-additionalFileInfo="exeCommandValue" appearance="outline" resize="vertical" placeholder="shutdown --s"></fluent-text-area>
                   </div>
+                  <div class="flex flex-col gap-md">
+                    <fluent-checkbox data-additionalFileInfo="openLinkOption">Open page in default browser</fluent-checkbox>
+                    <fluent-text-area data-additionalFileInfo="openLinkValue" appearance="outline" resize="vertical" placeholder="https://github.com/"></fluent-text-area>
+                  </div>
                 </div>
               </fluent-tab-panel>
             </fluent-tabs>
