--- a/resources/index.html
+++ b/resources/index.html
@@ -193,11 +193,11 @@
                   </div>
                   <fluent-checkbox data-additionalFileInfo="openInDefaultAppOption">Open in default app</fluent-checkbox>
                   <div class="flex flex-col gap-md">
-                    <fluent-checkbox data-additionalFileInfo="exeCommandOption">Execute command</fluent-checkbox>
+                    <fluent-checkbox data-additionalFileInfo="exeCommandOption">Execute command in root dir</fluent-checkbox>
                     <fluent-text-area data-additionalFileInfo="exeCommandValue" appearance="outline" resize="vertical" placeholder="shutdown --s"></fluent-text-area>
                   </div>
                   <div class="flex flex-col gap-md">
-                    <fluent-checkbox data-additionalFileInfo="openLinkOption">Open page in default browser</fluent-checkbox>
+                    <fluent-checkbox data-additionalFileInfo="openLinkOption">Open link in default browser</fluent-checkbox>
                     <fluent-text-area data-additionalFileInfo="openLinkValue" appearance="outline" resize="vertical" placeholder="https://github.com/"></fluent-text-area>
                   </div>
                 </div>
